--- a/404.html
+++ b/404.html
@@ -9,5 +9,5 @@ permalink: 404.html
 
   <h1>Ahhhhh!</h1>
 
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again, or search for it on the <a href="{{ site.baseurl }}/menu/writing.html">archives page</a>.</p>
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
 </div>
